avencement_apres_crud